...
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_sleepQuality"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepquality.SleepQualityFragment">

        <ImageView
            android:id="@+id/quality_zero_image"
...
            android:id="@+id/quality_one_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(1)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
            app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/quality_two_image"
            android:layout_width="@dimen/icon_size"
...
